--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container-center">
         
-            <div class="about-container">
+            <div class="about-container" id="about">
                     <div class="about-content-items">
                         <div class="text-about">
                             <h1>About</h1>
@@ -23,14 +23,13 @@
                             </div>
                         </div>
                         <div class="img-about">
-                            <img src="/assets/images/lgo.png" alt="image">
+                            <img src="lgo.png" alt="image">
                         </div>
                     </div>
                     <div class="buttons">
                         <a href="index.html" class="btn">volver</a>
                     </div>
             </div>
-    
         </div>
     </main>
 
