--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="buttons">
-                        <a href="index.html" class="btn">volver</a>
+                        <a href="index.html" class="btn">return</a>
                     </div>
             </div>
         </div>
