--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="buttons">
-                        <a href="index.html" class="btn">return</a>
+                        <a href="index.html" class="btn">Return</a>
                     </div>
             </div>
         </div>
